// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Actions Action on component method 1`] = `
Object {
  "Component": [Function],
  "methods": Object {
    "onClick": [Function],
  },
}
`;

exports[`Storyshots Addon|Actions Action on view method 1`] = `
Object {
  "Component": [Function],
  "methods": Object {
    "onButtonClicked": [Function],
  },
}
`;
